# ZhongCell

./: CMakeLists.txt
config/: multi_agent_zhong.json
model/cells/: SIR.h  Vicinity.h  Zhong_Cell.h  geographical_cell.hpp  helper_functions.cpp  helper_functions.hpp  simulation_configuration.hpp  sir.hpp  vicinity.hpp  zhong_cell.hpp
src/: main.cpp
